--- a/smart_contract/package.json
+++ b/smart_contract/package.json
@@ -21,6 +21,7 @@
     "hardhat": "^2.9.9"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "dotenv": "^16.0.1"
   }
 }
